# scrapman

./: Cargo.toml  README.md
data/: cian.yaml
examples/: cian.rs
src/: client.rs  context.rs  lib.rs  pipeline.rs  scrapman.rs  stage.rs  value.rs
src/action/: click_element.rs  fill_element.rs  mod.rs  open_url.rs  pause.rs  query_element.rs  set_model_attribute.rs  store_model.rs  test.rs
src/stage/: click_element.rs  fill_element.rs  mod.rs  open_url.rs  select.rs  set_model_attribute.rs  store_model.rs
