[package]
name = "scrapman"
version = "0.1.0"
authors = ["Konstantin Nadezhin <konstantin.nadezhin@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
fantoccini = "0.17.3"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["full"] }
serde_yaml = "0.8.17"
