[package]
name = "scrapman"
description = "A high-level declarative web scraping framework"
version = "0.1.0"
license =  "MIT"
edition = "2018"
authors = ["Konstantin Nadezhin <konstantin.nadezhin@gmail.com>"]
homepage = "https://github.com/nadejin/scrapman"
repository = "https://github.com/nadejin/scrapman.git"

[dependencies]
futures = "0.3.13"
async-trait = "0.1.48"
fantoccini = "0.17.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
json_dotpath = "1.1.0"
typetag = "0.1.7"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["full"] }
serde_yaml = "0.8.17"
mockall = "0.9.1"
